# The_Chess_Brain_Rot

./: CMakeLists.txt  README.md  imgui.ini
bld/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
include/: board.hpp  chess_controller.hpp  chess_renderer.hpp  game_state.hpp  piece.hpp  sound_manager.hpp  texture_manager.hpp
include/2D/: board.hpp  chess_controller.hpp  chess_renderer.hpp  game_state.hpp  moves.hpp  piece.hpp
src/: board.cpp  chess_controller.cpp  chess_renderer.cpp  game_state.cpp  main.cpp  moves.cpp  sound_manager.cpp  texture_manager.cpp
src/2D/: board.cpp  chess_controller.cpp  chess_renderer.cpp  game_state.cpp  moves.cpp
